syntax = "proto3";

package maarpc;

import "types.proto";

message CustomControllerSetOptionParam {
  optional int32 key = 1;
  optional string value = 2;
}

message CustomControllerInit {
  optional string id = 1;
  optional string ctrl_id = 2;
}

message CustomControllerSubmit {
  optional string handle = 1;
  optional string cmd_id = 2;
  optional bool ok = 3;
  oneof result {
    Size resolution = 101;
    string uuid = 102;
  }
}

message CustomControllerRequest {
  oneof payload {
    CustomControllerInit init = 1;
    CustomControllerSubmit submit = 2;
  }
}

message CustomControllerResponse {
  optional string ctrl_id = 1;
  optional string cmd_id = 2;
  oneof command {
    bool connect = 101; // void
    ClickParam click = 102;
    SwipeParam swipe = 103;
    KeyParam key = 104;
    TouchParam touch_down = 105;
    TouchParam touch_move = 106;
    TouchParam touch_up = 107;
    string start = 108;
    string stop = 109;
    bool resolution = 110; // void
    string image = 111;
    bool uuid = 112; // void

    CustomControllerSetOptionParam set_option = 200;
  }
}
