syntax = "proto3";

package maa;

message RpcStatus { optional bool success = 1; }

message Id { optional uint64 id = 1; }
message Handle { optional uint64 handle = 1; }
message Size {
  optional int32 width = 1;
  optional int32 height = 2;
}
message ImageInfo {
  optional int32 type = 1;
  optional Size size = 2;
}
enum Status {
  invalid = 0;
  pending = 1000;
  running = 2000;
  success = 3000;
  failed = 4000;
}

message EmptyRequest {}
message IdRequest { optional Id id = 1; }
message HandleRequest { optional Handle handle = 1; }
message BufferRequest { optional bytes buffer = 1; }
message HandleBufferRequest {
  optional Handle handle = 1;
  optional bytes buffer = 2;
}
message HandleStringRequest {
  optional Handle handle = 1;
  optional string str = 2;
}
message HandleIdRequest {
  optional Handle handle = 1;
  optional Id id = 2;
}

message EmptyResponse { optional RpcStatus status = 1; }
message IdResponse {
  optional RpcStatus status = 1;
  optional Id id = 101;
}
message BoolResponse {
  optional bool value = 1;
  optional RpcStatus status = 101;
}
message StringResponse {
  optional string value = 1;
  optional RpcStatus status = 101;
}
message HandleResponse {
  optional Handle value = 1;
  optional RpcStatus status = 101;
}
message BufferResponse {
  optional bytes value = 1;
  optional RpcStatus status = 101;
}
message ImageInfoResponse {
  optional ImageInfo value = 1;
  optional RpcStatus status = 101;
}
message StatusResponse {
  optional Status value = 1;
  optional RpcStatus status = 101;
}

message Callback {
  optional string msg = 1;
  optional string detail = 2;
}
